Perfil de teste

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,4 @@
 # toda as transações e conexoes com o database seja feita na camada de serviço
 # não deve haver transação pendente na camada de controlador
 spring.jpa.open-in-view=false
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=123456
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=test
