--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # toda as transações e conexoes com o database seja feita na camada de serviço
 # não deve haver transação pendente na camada de controlador
 spring.jpa.open-in-view=false
-spring.profiles.active=test
+spring.profiles.active=dev
