application-prod.properties - perfil de producao na nuvem

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 # toda as transações e conexoes com o database seja feita na camada de serviço
 # não deve haver transação pendente na camada de controlador
+
+# spring.profiles.active=dev
+
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
-spring.profiles.active=dev
