--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "apexcharts": "^3.40.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
